@@ -1,0 +1,19 @@
+description "Nova Console"
+author "Vishvananda Ishaya <vishvananda@gmail.com>"
+
+start on (filesystem and net-device-up IFACE!=lo)
+stop on runlevel [016]
+
+respawn
+
+chdir /var/run
+
+pre-start script
+	mkdir -p /var/run/nova
+	chown nova:root /var/run/nova
+
+	mkdir -p /var/lock/nova
+	chown nova:root /var/lock/nova
+end script
+
+exec su -c "nova-console --flagfile=/etc/nova/nova.conf" nova
